# qml-example-contrast-rectangle

./: .gitignore  CMakeLists.txt  README.md
AppContrastRectangle/: CMakeLists.txt
AppContrastRectangle/include/AppContrastRectangle/: main.hpp  version.hpp
AppContrastRectangle/qml/: ContrastRectangle.qml  MyMainWindow.qml
AppContrastRectangle/shaders/: invert.frag  passthrough.vert
AppContrastRectangle/src/: main.cpp
AppContrastRectangle/src/AppContrastRectangle/: main.cpp
